--- a/JavaScript/automation/package.json
+++ b/JavaScript/automation/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx webpack --mode production --entry ./script.js -o ./",
+    "dev": "npx webpack --mode development --watch --entry ./script.js -o ./"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "eslint": "^9.10.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
