--- a/JavaScript/automation/package.json
+++ b/JavaScript/automation/package.json
@@ -5,8 +5,8 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx webpack --mode production --entry ./script.js -o ./",
-    "dev": "npx webpack --mode development --watch --entry ./script.js -o ./"
+    "build": "npx webpack --mode production",
+    "dev": "npx webpack --mode development --watch"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,10 @@
     "eslint": "^9.10.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-runtime": "^7.25.4",
+    "@babel/preset-env": "^7.25.4",
+    "babel-loader": "^9.2.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   }
