--- a/JavaScript/fantasticAnimals/package.json
+++ b/JavaScript/fantasticAnimals/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx webpack --mode production",
-    "dev": "npx webpack --mode development --watch"
+    "dev": "npx webpack --mode development --watch",
+    "start": "npx webpack-dev-server --port 8085"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "@babel/preset-env": "^7.25.4",
     "babel-loader": "^9.2.1",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
