--- a/typescript/vite/package.json
+++ b/typescript/vite/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "~5.6.2",
     "vite": "^6.0.5"
+  },
+  "dependencies": {
+    "clipboard": "^2.0.11"
   }
 }
